--- a/client/src/Components/FormContraseña/Styles.css
+++ b/client/src/Components/FormContraseña/Styles.css
@@ -1,4 +1,5 @@
-.form {
+.form-login {
+  z-index: -10;
   width: 360px;
   padding: 40px;
   display: flex;
